# vellum

./: .gitignore  AGENTS.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
docs/: architecture.md  compiler-architecture-optimization.md  feature-map.md
src/: App.tsx  app.css  app.html  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ai_task.rs  compiler.rs  lib.rs  main.rs  packages.rs  session.rs  workspace.rs  world.rs
src-tauri/src/data/: mod.rs  tabular.rs  tensor.rs
src/app/: command-context.tsx  confirmation-context.tsx  workspace-context.tsx
src/app/plugins/: builtin-plugins.tsx  capabilities.ts  capability-registry.ts  host-capabilities.ts  plugin-api.ts  plugin-context.tsx  plugin-registry.test.ts  plugin-registry.ts  runtime.ts
src/application/: architecture-boundaries.test.ts  compile-progress-store.test.ts  compile-progress-store.ts  document-buffer-store.test.ts  document-buffer-store.ts  document-edit.test.ts  document-edit.ts  preview-compile-coordinator.test.ts  preview-compile-coordinator.ts  preview-page-cache.test.ts  preview-page-cache.ts  workspace-content-service.ts  workspace-controller.test.ts  workspace-controller.ts  workspace-features.ts  workspace-file-policy.ts  workspace-file-service.ts  workspace-file-sync-service.ts  workspace-package-service.ts  workspace-state.ts
src/application/ai/: agent-content.ts  agent-prompts.ts  agent-runtime.ts  agent-tool-registry.ts  agent-types.ts  ai-task-manager.test.ts  ai-task-manager.ts  editing-task-runner.ts  figure-task-runner.ts  typst-chart-generator.test.ts  typst-chart-generator.ts  typst-figure-source.ts  workspace-ai-coordinator.ts  workspace-mutation-coordinator.test.ts  workspace-mutation-coordinator.ts  workspace-task-host.ts  workspace-task-runner.ts  workspace-tool-runtime.ts
src/application/commands/: keybindings.test.ts  keybindings.ts  registry.test.ts  registry.ts
src/application/ports/: ai-task-repository.ts  workspace-gateway.ts
src/components/ai-elements/: attachments.tsx  chain-of-thought.tsx  code-block.tsx  conversation.tsx  message.tsx  prompt-input.tsx  reasoning.tsx  tool.tsx
src/components/ui/: command.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  file-type-icon.test.ts  file-type-icon.tsx  progress.tsx  resizable.tsx  scroll-area.tsx  sheet.tsx  sidebar.tsx
src/domain/: ai-task.ts  bibliography.test.ts  bibliography.ts  data.test.ts  data.ts  figure.test.ts  figure.ts  workspace.test.ts  workspace.ts
src/features/commands/: command-palette.tsx
src/features/data/: data-inspector.tsx  (+1 more)
src/hooks/: use-media-query.ts
src/infrastructure/: image-data.test.ts  image-data.ts  runtime.ts
src/lib/: core.test.ts  outline.ts  settings.svelte.ts  stores.svelte.ts  theme.svelte.ts  typst-language.ts  vault.svelte.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte  CodeMirror.svelte
src/styles/: base.css  interactive.css  layout.css  surfaces.css  tokens.css  typography.css
src/types/: bibtex-parser.d.ts
(+79 files in other folders)
