[package]
name = "vellum"
version = "0.1.0"
description = "Vellum — Typst-based knowledge management"
authors = ["you"]
edition = "2021"

[lib]
name = "vellum_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
typst = "0.15"
typst-pdf = "0.15"
typst-svg = "0.15"
typst-layout = "0.15"
typst-assets = { version = "0.15", features = ["fonts"] }
ecow = "0.2"
regex = "1"
walkdir = "2"
reqwest = { version = "0.12", features = ["blocking", "json"] }
tantivy = "0.22"

