[package]
name = "vellum"
version = "0.1.0"
description = "A local-first Typst writing workspace"
authors = ["Vellum contributors"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.92"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "vellum_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
calamine = "0.36"
csv = "1.4"
ecow = "0.2"
hdf5-reader = { version = "0.8", default-features = false, features = ["lz4"] }
matfile = "0.5"
netcdf-reader = { version = "0.8", default-features = false, features = ["netcdf4"] }
parquet = { version = "59.1", default-features = false, features = ["brotli", "flate2-zlib-rs", "lz4", "snap", "zstd"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-dialog = "2.7.2"
tauri-plugin-fs = "2.5.1"
typst = "0.15"
typst-assets = { version = "0.15", features = ["fonts"] }
typst-kit = { version = "0.15.0", features = ["datetime", "system-packages", "system-downloader"] }
typst-layout = "0.15"
typst-pdf = "0.15"
typst-svg = "0.15"
toml = "0.8.2"
walkdir = "2"
tauri-plugin-opener = "2"
